--- a/Ejercicio-Grid-System/css/style.css
+++ b/Ejercicio-Grid-System/css/style.css
@@ -1,4 +1,9 @@
 /* Inserta tu código aqui */
+body{
+	font-family: sans-serif;
+	font-weight: lighter;
+}
+
 header{
 	background: #333333;
 	
@@ -18,6 +23,7 @@ header{
 .container nav ul li a{
 	text-decoration: none;
 	color:white;
+	font-size: 15px;
 }
 
 .container h1,
@@ -34,17 +40,41 @@ header{
 	text-align: center;
 }
 
-.col-3 a img{
-	width: 100%;
-	height: 100%;
 
+
+img{
+	max-width: 100%;
 }
 
-.col-5 a img{
-	width: 100%;
-	height: 100%;
-}
 
-.col-5{
+.col-13{
 	text-align: center;
+	font-size: 11px;
+	
+	height: 140px;
+
+
 }
+
+
+
+
+
+.gale-img a img{
+	
+	border: solid 3px #fff;
+	-webkit-box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);
+	-moz-box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);
+	box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);
+
+}
+
+
+
+
+.null{
+padding: 0px;
+margin-top: 30px;
+margin-bottom: 20px;
+}
+
