--- a/Ejercicio-Grid-System/css/style.css
+++ b/Ejercicio-Grid-System/css/style.css
@@ -4,36 +4,60 @@ body{
 	font-weight: lighter;
 }
 
-header{
+.color_container1{
 	background: #333333;
 	
 }
-.container h1{
-	width: 25%;
-	padding-top:10px;
+
+.color_container1 .row{
+	padding-top: 10px;
 	padding-bottom: 10px;
 }
 
-.container nav ul li{
-	display: inline-block;
-	padding-left: 20px;
-
+.lastest_col{
+	color: #333333;
+	font-size: 18px;
+	font-weight: bold;
 }
 
-.container nav ul li a{
+.lastest_col a{
+	color: #456784;
+	font-size: 12px;
+	text-decoration: none;
+	
+}
+
+nav ul{
+	padding-left: 90px;
+}
+
+nav ul li{
+	display: inline-block;
+	padding-right: 25px;
+}
+
+nav ul li a{
 	text-decoration: none;
 	color:white;
-	font-size: 15px;
+	font-size: 13px;
 }
 
-.container h1,
-.container nav{
+
+h1 ,
+nav {
 	vertical-align: middle;
 	display: inline-block;
+	
 }
 
-.container_Latest{
+
+.color_container2{
 	background: #eeeeee;
+}
+
+.color_container2 .col-12{
+	padding-top: 19px;
+	padding-bottom: 19px;
 }
 
 .col-3{
@@ -58,9 +82,17 @@ img{
 
 
 
-
-
 .gale-img a img{
+	
+	border: solid 3px #fff;
+	-webkit-box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);
+	-moz-box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);
+	box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);
+
+}
+
+
+.gale-img2 a img{
 	
 	border: solid 3px #fff;
 	-webkit-box-shadow: -1px 0px 5px -1px rgba(0,0,0,0.75);
@@ -72,9 +104,125 @@ img{
 
 
 
+
 .null{
 padding: 0px;
 margin-top: 30px;
 margin-bottom: 20px;
 }
 
+
+.gale-img a{
+	font-weight: bold;
+	text-decoration: none;
+	color: #456784;
+	font-size: 12px;
+}
+
+.gale-img2 a{
+font-weight: bold;
+	text-decoration: none;
+	color: #456784;
+	font-size: 15px;
+}
+
+.color_container2 .container{
+	border-top: 2px solid #bbbbbb;
+	border-bottom: 2px solid #bbbbbb;
+	padding-bottom: 15px;
+}
+
+.col-4 .col-12{
+	padding-top: 20px;
+	padding-bottom: 5px;
+}
+
+
+.col-12 h3{
+	color: #615F5F;
+	font-size: 14px;
+	border-bottom:  1px solid #ccc;
+}
+
+
+.col-4 ul li{
+	display: inline-block;
+	margin-right: 10px; 
+}
+
+.icon-img img{
+	width: 80%;
+}
+
+.col-img img{
+	width: 90%;
+}
+
+.cols-redes{
+	margin-bottom: 5px;
+}
+
+
+.cols-redes .col-9{
+	padding-left: 0px;
+}
+
+
+.cols-redes a{
+	text-decoration: none;
+	color: #456784;
+}
+
+.text{
+	border-top: 1px solid #ccc;
+}
+
+.text p{
+	color: #000;
+	margin-top: 10px;
+	font-size: 12px;
+}
+
+.text span{
+	font-size: 12px;
+	color: #456784;
+}
+
+.top{
+	margin-top: 20px;
+}
+
+.cols-redes .col-9 a{
+	font-size: 12px;
+}
+
+.col-4 .col-12{
+	padding-left: 70px;
+}
+
+footer p{
+	color: #ffffff;
+	font-size: 14px;
+}
+
+footer p a{
+	text-decoration: none;
+	color:#7a7979;
+}
+
+.menu_footer ul li a{
+	color:#7a7979;
+	font-size: 11px;
+}
+
+
+.copyright{
+	color:#7a7979;
+	padding-left: 200px;
+	font-size: 11px;
+}
+
+footer .col-12{
+	padding-top: 20px;
+	padding-bottom: 25px;
+}
